--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@
 /src/Services/Project.Services.EmployeeService/obj/
 /docs/images/*.bkp
 /docs/images/*.drawio
-/src/Project.HttpServer/obj/
 /src/Project.HttpServer/obj/Debug/
 /src/.idea/.idea.Project/
+/src/Dto/Project.Dto.Http/bin/
+/src/Dto/Project.Dto.Http/obj/
+/src/Dto/Project.Dto.Http.Converters/bin/
+/src/Dto/Project.Dto.Http.Converters/obj/
+/src/Services/Project.Services.CompanyService/bin/
+/src/Services/Project.Services.CompanyService/obj/
+/src/Project.HttpServer/obj/*
+/src/Project.HttpServer/obj/Debug/*
+/src/Project.HttpServer/obj/
