--- a/src/Database/Database.Models/Database.Models.csproj
+++ b/src/Database/Database.Models/Database.Models.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>Library</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="Npgsql" Version="9.0.3"/>
     </ItemGroup>
 
