--- a/src/Project.Services.EducationService/Project.Services.EducationService.csproj
+++ b/src/Project.Services.EducationService/Project.Services.EducationService.csproj
@@ -1,15 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Library</OutputType>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <RootNamespace>Project.Services.Education_</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Moq" Version="4.20.72" />
-    </ItemGroup>
 
 </Project>
