--- a/src/Services/Project.Services.EducationService/Project.Services.EducationService.csproj
+++ b/src/Services/Project.Services.EducationService/Project.Services.EducationService.csproj
@@ -1,16 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Library</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4"/>
-        <PackageReference Include="Moq" Version="4.20.72" />
+      <ProjectReference Include="..\..\Project.Core\Project.Core.csproj" />
     </ItemGroup>
 
 </Project>
