--- a/src/Services/Project.Services.EmployeeService/Project.Services.EmployeeService.csproj
+++ b/src/Services/Project.Services.EmployeeService/Project.Services.EmployeeService.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>Library</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -11,5 +11,9 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\Project.Core\Project.Core.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Moq" Version="4.20.72" />
     </ItemGroup>
 </Project>
