--- a/src/Services/Project.Services.EducationService/Project.Services.EducationService.csproj
+++ b/src/Services/Project.Services.EducationService/Project.Services.EducationService.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Library</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Project.Core\Project.Core.csproj" />
+        <ProjectReference Include="..\..\Project.Core\Project.Core.csproj"/>
     </ItemGroup>
 
 </Project>
