--- a/src/Tests/Project.Service.Tests/Project.Service.Tests.csproj
+++ b/src/Tests/Project.Service.Tests/Project.Service.Tests.csproj
@@ -8,18 +8,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-      <PackageReference Include="Moq" Version="4.20.72" />
-      <PackageReference Include="xunit" Version="2.9.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
+        <PackageReference Include="Moq" Version="4.20.72"/>
+        <PackageReference Include="xunit" Version="2.9.3"/>
     </ItemGroup>
-    
+
     <ItemGroup>
         <ProjectReference Include="..\..\Project.Core\Project.Core.csproj"/>
         <ProjectReference Include="..\..\Database\Database.Repositories\Database.Repositories.csproj"/>
-        <ProjectReference Include="..\..\Services\Project.Services.EducationService\Project.Services.EducationService.csproj" />
-        <ProjectReference Include="..\..\Services\Project.Services.EmployeeService\Project.Services.EmployeeService.csproj" />
+        <ProjectReference Include="..\..\Services\Project.Services.EducationService\Project.Services.EducationService.csproj"/>
+        <ProjectReference Include="..\..\Services\Project.Services.EmployeeService\Project.Services.EmployeeService.csproj"/>
         <ProjectReference Include="..\..\Services\Project.Services.EmployeeService\Project.Services.EmployeeService.csproj"/>
         <ProjectReference Include="..\..\Services\Project.Services.CompanyService\Project.Services.CompanyService.csproj"/>
+        <ProjectReference Include="..\..\Services\Project.Services.PostService\Project.Services.PostService.csproj"/>
     </ItemGroup>
 
 </Project>
