--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         dotnet test ./src/Tests/Project.Repository.Tests/Project.Repository.Tests.csproj --no-build --configuration Debug --verbosity normal
         dotnet test ./src/Tests/Project.Service.Tests/Project.Service.Tests.csproj --no-build --configuration Debug --verbosity normal
+        dotnet test ./src/Tests/Project.Controller.Tests/Project.Controller.Tests.csproj --no-build --configuration Debug --verbosity normal
       env:
         # Для TestContainers
         TESTCONTAINERS_RYUK_DISABLED: "true"
