--- a/src/Project.HttpServer/appsettings.Development.json
+++ b/src/Project.HttpServer/appsettings.Development.json
@@ -4,7 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     },
-    "Testcontainers": "Debug"
+    "Console": {
+      "LogLevel": {
+        "Default": "Debug"
+      }
+    },
+    "File": {
+      "Path": "../Logs/app.log",
+      "LogLevel": "Information"
+    }
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "File", "Args": { "path": "../Logs/serilog-.log" } }
+    ]
   },
   "AllowedHosts": "*",
   "AllowedHeaders": "AllowAllHeaders",
