--- a/src/Database/Database.Context/Database.Context.csproj
+++ b/src/Database/Database.Context/Database.Context.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
